# python-tio

./: .gitignore  Makefile  README.rst  setup.cfg  setup.py
tio/: __init__.py  contants.py  exceptions.py  tio.py  utils.py
