[metadata]
name = tio
version = attr: tio.__version__
url = https://github.com/Rom1-J/python-/
author = Romain J.
author_email = romain@gnous.eu
maintainer = Romain J.
maintainer_email = romain@gnous.eu
description = Custom SDK for https://tio.run
long_description = file: README.rst
license = agplv3
platforms = linux

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    aiocache>=0.11.1
    aiohttp>=3.7.4"
    requests>=2.25.1


[options.packages.find]
include =
    tio
    tio.*
